change index.html file

--- a/movie.html
+++ b/movie.html
@@ -10,6 +10,74 @@
 
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+          <div class="BigHeader">
+            <div class="logo">
+              <img src="images/header-images/TMDB logo.svg" alt="TMDB Logo" />
+            </div>
+            <nav class="nav-menu">
+              <ul>
+                <li>
+                  <a href="#" class="smoothScroll">Фильмы</a>
+                  <div class="dropDown">
+                    <ul>
+                      <li><a href="#">Популярные</a></li>
+                      <li><a href="#">Смотрят сейчас</a></li>
+                      <li><a href="#">Ожидаемые</a></li>
+                      <li><a href="#">Лучшие</a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li>
+                  <a href="#" class="smoothScroll">Сериалы</a>
+                  <div class="dropDown1">
+                    <ul>
+                      <li><a href="#">Популярные</a></li>
+                      <li><a href="#">Смотрят сейчас</a></li>
+                      <li><a href="#">Ожидаемые</a></li>
+                      <li><a href="#">Лучшие</a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li>
+                  <a href="#" class="smoothScroll">Люди</a>
+                  <div class="dropDown2">
+                    <ul>
+                      <li><a href="#">Популярные Люди</a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li>
+                  <a href="#" class="smoothScroll">Ещё</a>
+                  <div class="dropDown3">
+                    <ul>
+                      <li><a href="#">Обсуждения</a></li>
+                      <li><a href="#">Доска почёта</a></li>
+                      <li><a href="#">Поддержка</a></li>
+                      <li><a href="#">API</a></li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </nav>
+            <div class="header-right">
+              <img src="images/header-images/plusLogo.svg" alt="Plus" />
+              <div class="switch-lang">RU</div>
+              <ul>
+                <li><a href="#">Войти</a></li>
+                <li><a href="#">Присоединиться к TMDB</a></li>
+              </ul>
+    
+              <img src="images/header-images/searchIcon.svg" alt="Search" />
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="search-box container">
+        <img src="images/header-images/searchIcon.svg" class="search-icon" />
+        <input type="text" placeholder="Найти фильм, сериал, персону..." />
+      </div>
     <div class="movie-info" id="movie-info">
         <div class="shadow">
             <div class="container">
