add movie and main media

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="contzainer">
         <div class="BigHeader">
           <div class="logo">
             <img src="images/header-images/TMDB logo.svg" alt="TMDB Logo" />
@@ -129,6 +129,7 @@
             </div>
           </div>
           <div id="video-list" class="video-list"></div>
+          <div class="video_modal" id="video_modal"></div>
         </div>
       </div>
     </div>
