add some changes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
       </div>
     </header>
-    <div class="homeMenu">
+    <section class="homeMenu">
       <div class="shadow">
         <div class="container">
           <div class="writers">
@@ -86,8 +86,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="movies-carusel" id="movies-carusel">
+    </section>
+    <section class="movies-carusel" id="movies-carusel">
       <div class="container">
         <div class="">
           <div class="trend">
@@ -107,8 +107,8 @@
           <div id="movie-list" class="movie-list flex"></div>
         </div>
       </div>
-    </div>
-    <div class="videos-carusel">
+    </section>
+    <section class="videos-carusel">
       <div class="shadow">
         <div class="container">
           <div class="trend">
@@ -129,8 +129,8 @@
           <div class="video_modal" id="video_modal"></div>
         </div>
       </div>
-    </div>
-    <div class="movies-carusel-2">
+    </section>
+    <section class="movies-carusel-2">
       <div class="container">
         <div class="">
           <div class="trend flex">
@@ -148,7 +148,7 @@
           <div id="movie-list-2" class="movie-list flex"></div>
         </div>
       </div>
-    </div>
+    </section>
     <div class="banner">     
       <div class="shadow">
         <div class="container">
@@ -165,7 +165,7 @@
         </div>
       </div>
     </div>
-    <div class="listOfPeople">
+    <section class="listOfPeople">
       <div class="container">
         <div class="listWriters flex">
           <h2>Доска почёта</h2>  
@@ -248,9 +248,9 @@
                 </div>
                 <div class="redOne flex">
                   <div class="person_Red" style="--value: 3742;"></div>
-                  <p>3,742</p>
+                  <p>3,742</p>               
                 </div>
-                </div>
+              </div>
             </div>
           </div>
           <div class="Peoples left">
@@ -324,9 +324,12 @@
                 </div>
                 </div>
             </div>
+          </div>
         </div>
       </div>
-    </div>
+        
+      </div>
+    </section>
 
     <footer id="footer" class="footer">
       <div class="container">
