--- a/index.html
+++ b/index.html
@@ -90,19 +90,12 @@
       </div>
 
     </header>
-    <div class="search-box container">
-=======
-
     <!-- <div class="search-box container">
->>>>>>> feat/headerMedia
       <img src="images/header-images/searchIcon.svg" class="search-icon" />
       <input type="text" placeholder="Найти фильм, сериал, персону..." />
-    </div>
+    </div> -->
 
     <div class="homeMenu">
-=======
-    <section class="homeMenu">
->>>>>>> 178259c5b40ec30f3f3b9bc2834a23ec21d7b3cc
       <div class="shadow">
         <div class="container">
           <div class="writers">
@@ -112,8 +105,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="movies-carusel" id="movies-carusel">
+    </div>
+    <div class="movies-carusel" id="movies-carusel">
       <div class="container">
         <div class="">
           <div class="trend">
@@ -133,8 +126,8 @@
           <div id="movie-list" class="movie-list flex"></div>
         </div>
       </div>
-    </section>
-    <section class="videos-carusel">
+    </div>
+    <div class="videos-carusel">
       <div class="shadow">
         <div class="container">
           <div class="trend">
@@ -155,8 +148,8 @@
           <div class="video_modal" id="video_modal"></div>
         </div>
       </div>
-    </section>
-    <section class="movies-carusel-2">
+    </div>
+    <div class="movies-carusel-2">
       <div class="container">
         <div class="">
           <div class="trend flex">
@@ -174,7 +167,7 @@
           <div id="movie-list-2" class="movie-list flex"></div>
         </div>
       </div>
-    </section>
+    </div>
     <div class="banner">     
       <div class="shadow">
         <div class="container">
@@ -191,7 +184,7 @@
         </div>
       </div>
     </div>
-    <section class="listOfPeople">
+    <div class="listOfPeople">
       <div class="container">
         <div class="listWriters flex">
           <h2>Доска почёта</h2>  
@@ -274,9 +267,9 @@
                 </div>
                 <div class="redOne flex">
                   <div class="person_Red" style="--value: 3742;"></div>
-                  <p>3,742</p>               
+                  <p>3,742</p>
                 </div>
-              </div>
+                </div>
             </div>
           </div>
           <div class="Peoples left">
@@ -350,12 +343,9 @@
                 </div>
                 </div>
             </div>
-          </div>
         </div>
       </div>
-        
-      </div>
-    </section>
+    </div>
 
     <footer id="footer" class="footer">
       <div class="container">
